samples/_failures_safe/1761392017_9071ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_efd55e29.c: In function ‘main’:
./samples/SAFE/__tmp_efd55e29.c:146:5: error: expected expression at end of input
  146 |     double ratio = (compressed_size * 100.0) /
      |     ^~~~~~
./samples/SAFE/__tmp_efd55e29.c:146:5: error: expected declaration or statement at end of input
